--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,36 @@
  *= require_self
  */
 @import "bootstrap";
+
+#welcome {
+    margin-top:50px;
+}
+
+.assessments {
+    font-size: 20px;
+}
+
+.email-field {
+    display: block;
+    width: 50%;
+    height: calc(2.25rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    margin: auto;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.centered {
+    text-align:center;
+}
+
+.btn-custom {
+    margin-top: 10px;
+    font-size: 16px;
+}
