--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,11 @@
 
   <body>
     <div class="container">
+
+        <% flash.each do |key, value| %>
+            <div class="alert alert-danger"><%= value %></div>
+          <% end %>
+
         <%= yield %>
     </div>
   </body>
